01-02-정민경-김홍진

--- a/week-01/session-02/정민경 김홍진/01-02--정민경-김홍진.md
+++ b/week-01/session-02/정민경 김홍진/01-02--정민경-김홍진.md
@@ -37,3 +37,8 @@
 
 
 ### Http에서 Get과 Post 방식의 기능 말고 다른 기능은 무엇이 있는가??
+- GET : 서버에게 조회할 리소를 요청한다. (READ, 조회)
+- POST : 서버에게 본문(body)에 생성할 데이터를 삽입하여 전송한다. (CREATE, 생성)
+- PUT : 서버에게 본문에 수정할 데이터를 삽입하여 전송한다. (UPDATE, 생성)
+- DELETE : 서버에게 삭제할 리소스를 요청한다. (DELETE, 삭제)
+- PATCH : PUT과 비슷하지만 일부만 수정한다는 점에서 다르다.
