--- a/질문발표.md
+++ b/질문발표.md
@@ -8,14 +8,14 @@
 
 ### 2. 협업할 때 패키지를 팀원과 공유할 수 있는 것
 ><img width="342" alt="image" src="https://user-images.githubusercontent.com/96401830/169434723-0f803dac-137a-4fb9-a96b-59864f8dafaa.png">
-
-```
-pip freeze > requirements.txt
-```
+>
+>```
+>pip freeze > requirements.txt
+>```
 >설치한 패키지 목록이 txt 파일로 저장됨
- ```
-pip install -r requirements.txt
-```
+> ```
+>pip install -r requirements.txt
+>```
 >Requirements에 있는 패키지를 설치
 
 ---
