--- a/질문발표.md
+++ b/질문발표.md
@@ -37,7 +37,7 @@
 >
 >**activate -> Bash 파일 (환경설정 파일)**
 >
->※ Bash: 텍스트 형식으로 저장되어서 한 줄씩 순차적으로 읽어 실행되도록 작성된 프로그램
+>※ Bash: 'Bourne Again Shell'의 줄임말로, 스티브 본(Steve Bourne)이라는 사람이 개발한 최초의 유닉스 '쉘 프로그램'인 sh의 확장판이라는 의미를 담고 있다. 쉘(Shell)이란 키보드로 입력한 명령어(Command)를 운영체제(OS)에 전달하여, 키보드로 입력한 명령어를 실행하게끔 하는 프로그램이다.
 >
 > * Source 명령어는 bash 파일을 리부팅 없이 즉시 적용하는 역할!
 > * 리눅스 환경설정 파일들을 수정하기만 한다고 바로 내용이 적용되는 것은 아니다. 
